[project]
name = "rsautils"
version = "0.0.0"
description = "Some funny things where I try to do some RSA stuff. Experimental and no warranty regarding security."
license = { text = "EPL-2.0" }
authors = [
    {name = "Tech-TTGames",email = "50541739+Tech-TTGames@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[project.urls]
repository = "https://github.com/Tech-TTGames/rsautils"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
yapf = "^0.43.0"
pylint = "^3.3.8"
pytest = "^8.4.2"
coverage = "^7.10.6"
pytest-mock = "^3.15.0"
pytest-cov = "^7.0.0"

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.isort]
profile = "google"
lines_between_types = 1

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
